fixed aligning arrow correctly

--- a/src/modules/common/components/input-dropdown/input-dropdown.styles.less
+++ b/src/modules/common/components/input-dropdown/input-dropdown.styles.less
@@ -72,7 +72,7 @@
 }
 
 .InputDropdown__icon {
-  align-self: center;
+  align-self: flex-end;
 
   svg {
     height: 1em;
